[package]
name = "yaml-validator"
version = "0.2.0"
authors = ["Mathias Pius <contact@pius.io>"]
edition = "2018"
description = "A library for validating YAML against YAML-defined schemas"
repository = "https://github.com/MathiasPius/yaml-validator"
readme = "README.md"
license = "MIT"
keywords = ["YAML", "validation", "schema"]

[dependencies]
yaml-rust = { version = "0.8", package = "yaml-rust2" }
thiserror = "1.0.58"
regex = { "version" = "1.10.4", optional = true }
smallvec = { "version" = "1.13.2", optional = true }

[features]
default = ["regex", "smallvec"]
regex = ["dep:regex"]
smallvec = ["dep:smallvec"]

